--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
+    "@ant-design/icons": "^5.6.1",
+    "@ant-design/plots": "^1.2.13",
+    "antd": "^5.24.2",
+    "axios": "^1.8.1",
+    "moment": "^2.30.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-csv": "^2.2.2",
+    "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.15.1",
     "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -17,6 +24,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "eslintConfig": {
     "extends": [
