--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL=http://ec2-65-1-112-188.ap-south-1.compute.amazonaws.com
+REACT_APP_API_BASE_URL=http://ec2-65-1-112-188.ap-south-1.compute.amazonaws.com:8080
