--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^14.5.2",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
+    "gh-pages": "^6.3.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
