--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+"homepage": "https://roomtracker.fun",
   "name": "my-rommapp",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^14.5.2",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
+    "gh-pages": "^6.3.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
@@ -21,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
