--- a/package.json
+++ b/package.json
@@ -1,54 +1,1 @@
-{
-"homepage": "https://roomtracker.fun",
-  "name": "my-rommapp",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^5.6.1",
-    "@ant-design/plots": "^2.3.3",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.2",
-    "antd": "^5.24.2",
-    "axios": "^1.8.1",
-    "gh-pages": "^6.3.0",
-    "moment": "^2.30.1",
-    "react": "^18.2.0",
-    "react-csv": "^2.2.2",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1",
-    "react-scripts": "^5.0.1",
-    "recharts": "^2.15.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "resolutions": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
-}
+{"homepage":"https://roomtracker.fun","name":"my-rommapp","version":"0.1.0","private":true,"dependencies":{"@ant-design/icons":"^5.6.1","@ant-design/plots":"^2.3.3","@testing-library/jest-dom":"^6.6.3","@testing-library/react":"^14.2.1","@testing-library/user-event":"^14.5.2","antd":"^5.24.2","axios":"^1.8.1","gh-pages":"^6.3.0","moment":"^2.30.1","react":"^18.2.0","react-csv":"^2.2.2","react-dom":"^18.2.0","react-router-dom":"^6.30.0","react-scripts":"^5.0.1","recharts":"^2.15.1","web-vitals":"^2.1.4"},"scripts":{"start":"react-scripts start","predeploy":"npm run build","deploy":"gh-pages -d build","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject"},"resolutions":{"react":"18.2.0","react-dom":"18.2.0"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]}}
