--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@testing-library/user-event": "^14.5.2",
     "antd": "^5.24.2",
     "axios": "^1.8.1",
+    "date-fns": "^4.1.0",
     "gh-pages": "^6.3.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-swipeable": "^7.0.2",
     "recharts": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
