--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_BASE_URL=https://animated-meme-gw5xxq499r6hwpv-8080.app.github.dev
+REACT_APP_API_BASE_URL=https://roomtrackerbackend.onrender.com
