--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "^5.0.1",
     "react-swipeable": "^7.0.2",
     "recharts": "^2.15.1",
+    "sass": "^1.86.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
